# fitfoodway-scraper

./: Cargo.toml
js_scrapper_custom_order/: main.js
src/: main.rs
