[package]
name = "rust-testing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
scraper = "0.12.0"
regex = "1.1.9"
dotenv = "0.15.0"
more-asserts = "0.2.2"
